@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: plot2d.c,v 1.133.2.7 2008/03/12 03:21:42 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: plot2d.c,v 1.133.2.8 2008/06/22 23:06:55 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - plot2d.c */
@@ -1668,10 +1668,14 @@ eval_plots()
                 if (this_plot->plot_style == VECTOR) {
                     int stored_token = c_token;
                     
-                    if (!set_lpstyle) {
-                        default_arrow_style(&(this_plot->arrow_properties));
-                        this_plot->arrow_properties.lp_properties.l_type = line_num;
-                    }
+		    if (!set_lpstyle) {
+			default_arrow_style(&(this_plot->arrow_properties));
+			if (prefer_line_styles)
+			    lp_use_properties(&(this_plot->arrow_properties.lp_properties),
+			    			line_num+1, FALSE);
+			else
+			    this_plot->arrow_properties.lp_properties.l_type = line_num;
+		    }
 
 		    arrow_parse(&(this_plot->arrow_properties), TRUE);
                     if (stored_token != c_token) {
@@ -1750,7 +1754,11 @@ eval_plots()
              * copy this to overall plot linetype so that the key sample matches */
             if (this_plot->plot_style == VECTOR) {
                 if (!set_lpstyle) {
-                    this_plot->arrow_properties.lp_properties.l_type = line_num;
+		    if (prefer_line_styles)
+			lp_use_properties(&(this_plot->arrow_properties.lp_properties),
+					line_num+1, FALSE);
+		    else
+			this_plot->arrow_properties.lp_properties.l_type = line_num;
                     arrow_parse(&this_plot->arrow_properties, TRUE);
                 }
                 this_plot->lp_properties = this_plot->arrow_properties.lp_properties;
